tests/type-errors/expr_cmp_ne_list.arl
archetype expr_cmp_ne_list

entry exec () {
  var a : list<nat> = [1; 2; 3];
  var b : list<nat> = [1; 2; 3];
  do_require (a <> b, "ko");
}
